# civiclens

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  nightly-ingest.yml
agents/: evidence.py  graph.py  guardrails.py  state.py  tabular.py
api/: main.py  voice_ws.py
api/static/: voice.html
common/: db.py  llm.py  settings.py
data/samples/: README.md  mesa_council_2026-04-06.en.vtt  mesa_council_2026-04-06_agenda_items.csv
docs/: DECISIONS.md
evals/: ablation.py  dataset.py  generate.py  golden_dataset.json  golden_rejected.json  metrics.py  ragas_runner.py  run.py  validate.py
evals/results/: ablation.json  baseline.json  pii_eval.json  redteam.json  results-sample.json  results.json  voice_latency.json  voice_turns.jsonl
infra/: Dockerfile  docker-compose.yml  ensure_ollama.sh  run_demo.sh
infra/migrations/: 001_init.sql  002_pii_quarantine.sql
ingestion/: asr.py  captions.py  cli.py  digest.py  legistar.py  models.py  pdf.py  store.py  tables.py  video_match.py  windows.py
retrieval/: embeddings.py  index.py  search.py  topics.py
safety/: hardening.py  pii.py  redteam.py  run_safety.py
tests/: conftest.py  test_ablation.py  test_agents_integration.py  test_api.py  test_asr.py  test_captions.py  test_digest.py  test_eval_metrics.py  test_graph.py  test_legistar.py  test_pdf.py  test_pii.py  test_ragas_runner.py  test_redteam.py  test_retrieval_sanity.py  test_samples.py  test_search.py  test_smoke.py  test_tables.py  test_tabular.py  test_topics.py  test_ui_sse.py  test_voice_asr_stream.py  test_voice_loopback.py  test_voice_tts.py
ui/: app.py  sse.py
voice/: asr_stream.py  bench.py  metrics.py  protocol.py  tts.py
